added font, change css, added some other text

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -7,7 +7,8 @@
   </label> -->
   <div class="color-scheme-wrapper">
     <div id="nav-wrapper">
-      <div id="site-logo-text"><a href="/">into the wildlands</a></div>
+      <div id="site-logo-text"><a href="/">JOSH</a></div>
+      <div>{% include "partials/navigation.njk" %}</div>
     </div>
     <div id="main-wrapper">
       <main>
@@ -16,10 +17,10 @@
     </div>
     <div id="footer-wrapper">
       <footer>
-        <div>{% include "partials/navigation.njk" %}</div>
-        <br/><a href="/colophon/">
+        {# <div>{% include "partials/navigation.njk" %}</div> #}
+        {# <br/><a href="/colophon/"> #}
           (-_-)
-        </a>
+        {# </a> #}
       </footer>
     </div>
   </div>
