--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -1,8 +1,3 @@
 <nav>
-    <a href="/food/">food</a>
-    <a href="/food/">craft</a>
-    <a href="/food/">home</a>
-    <a href="/food/">plants</a>
-    <a href="/food/">stories</a>
-    <a href="/festivals/">festivals</a>
+    <a href="/things/">things</a>
 </nav>
