--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -58,10 +58,10 @@
 
 :root {
   --site-width: 45rem;
-  --color-one: #902923;
-  --color-background: #ffd252; // edb525
-  --color-three: #631C18;
-  --color-font: #000;
+  --color-one: #A6033F;
+  --color-background: #F2D8DA; // edb525
+  --color-three: #F266C1; // ##D99C9C
+  --color-font: #51608C;
 }
 
 // @media (prefers-color-scheme: dark) {
