--- a/src/_includes/base_no_topnav.njk
+++ b/src/_includes/base_no_topnav.njk
@@ -6,9 +6,9 @@
     <span class="light-mode-hide">Light Mode</span>
   </label> -->
   <div class="color-scheme-wrapper">
-    {# <div id="nav-wrapper">
-      <div id="site-logo-text"><a href="/">into the wildlands</a></div>
-    </div> #}
+    <div id="nav-wrapper">
+      <div id="site-logo-text"><a href="/">JOSH</a></div>
+    </div>
     <div id="main-wrapper">
       <main>
         {{ content | safe }}
