--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,10 @@
 }
 :root {
   --site-width: 45rem;
-  --color-one: #902923;
-  --color-background: #ffd252;
-  --color-three: #631C18;
-  --color-font: #000;
+  --color-one: #A6033F;
+  --color-background: #F2D8DA;
+  --color-three: #F266C1;
+  --color-font: #51608C;
 }
 
 body {
