--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -60,20 +60,22 @@
   --site-width: 45rem;
   --color-one: #A6033F;
   --color-background: #F2D8DA; // edb525
-  --color-three: #F266C1; // ##D99C9C
-  --color-font: #51608C;
+  --color-three: #F266C1;
+  --color-four: #D99C9C;
+  --color-five: #51608C;
+  --color-six: #00CBC9;
 }
 
 // @media (prefers-color-scheme: dark) {
 //   :root {
 //     --color-background: #222831;
-//     --color-font: #EEEEEE;
+//     --color-five: #EEEEEE;
 //   }
 // }
 
 // #color-mode:checked ~ .color-scheme-wrapper {
 //   --color-background: #222831;
-//   --color-font: #EEEEEE;
+//   --color-five: #EEEEEE;
 // }
 
 // #color-mode ~ label::after {
@@ -87,7 +89,7 @@
 // @media (prefers-color-scheme: dark) {
 //   #color-mode:checked ~ .color-scheme-wrapper {
 //     --color-background: #FFF;
-//     --color-font: #000;
+//     --color-five: #000;
 //   }
 // }
   
@@ -102,7 +104,7 @@ body {
     overflow-y: scroll;
     margin: 0 auto;
 
-    color: var(--color-font);
+    color: var(--color-five);
 
     cursor: url("/assets/images/cursor-pointer.png") 12 0,auto;
 
@@ -113,7 +115,7 @@ body {
       min-height:100vh;
 
       background-color: var(--color-background);
-      color: var(--color-font);
+      color: var(--color-five);
     }
 }
 
@@ -143,7 +145,7 @@ body {
 //   cursor: pointer;
 //   position: absolute;
 //   background: var(--color-background);
-//   color: var(--color-font);
+//   color: var(--color-five);
 //   padding: 1rem;
 //   top: 1rem;
 //   left: 1rem;
@@ -197,12 +199,14 @@ body {
 
 #footer-wrapper {
   @include fixedsys-stack();
+  background: var(--color-five);
+  // border-top: 6px solid var(--color-three);
 
   footer {
     margin: 0 auto;
     max-width: var(--site-width);
-    color: lightgray;
-    padding: 2rem 1rem;
+    color: var(--color-background);
+    padding: 1rem 1rem;
     // text-align: center;
 
     a {
@@ -301,4 +305,13 @@ code {
 
 ol, ul {
   line-height: 1.5rem;
+}
+
+#header-nav-bar {
+  border-bottom: 6px solid var(--color-three);
+}
+
+.bottom-line {
+  border-top: 4px solid var(--color-six);
+  height: 4px;
 }
