--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,8 @@ body .color-scheme-wrapper {
   grid-template-rows: auto 1fr auto;
   grid-template-columns: 1fr;
   min-height: 100vh;
-  background-color: var(--color-background);
-  color: var(--color-five);
+  background-color: var(--color-five);
+  color: var(--color-background);
 }
 
 #nav-wrapper #site-logo-text {
@@ -102,7 +102,7 @@ p {
 a {
   outline: 0;
   cursor: url("/assets/images/cursor-hand.png") 12 0, auto;
-  color: var(--color-one);
+  color: var(--color-six);
 }
 
 a:hover {
@@ -185,11 +185,7 @@ ol, ul {
   line-height: 1.5rem;
 }
 
-#header-nav-bar {
-  border-bottom: 6px solid var(--color-three);
-}
-
 .bottom-line {
-  border-top: 4px solid var(--color-six);
+  border-top: 4px solid var(--color-three);
   height: 4px;
 }
