fixedsys everywhere, larger font

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -22,7 +22,7 @@
       <footer>
         {# <div>{% include "partials/navigation.njk" %}</div> #}
         {# <br/><a href="/colophon/"> #}
-          (-_-) (c) 2025 josh sawyer
+          (c) 2025 josh sawyer
         {# </a> #}
       </footer>
     </div>
