--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -95,10 +95,11 @@
   
 
 body {
-    font-family: 'Courier', 'Courier Prime', 'Courier New', sans-serif;
+    @include fixedsys-stack();
     font-display: swap;
-    font-size: 16px;
+    font-size: 24px;
     height: 100vh;
+    // line-height: 4rem;
 
     overflow-x: auto;
     overflow-y: scroll;
@@ -304,7 +305,7 @@ code {
 }
 
 ol, ul {
-  line-height: 1.5rem;
+  line-height: 2rem;
 }
 
 // #header-nav-bar {
