--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,9 @@
 }
 
 body {
-  font-family: "Courier", "Courier Prime", "Courier New", sans-serif;
+  font-family: "fixedsys", "Courier Prime", "Courier New", sans-serif;
   font-display: swap;
-  font-size: 16px;
+  font-size: 24px;
   height: 100vh;
   overflow-x: auto;
   overflow-y: scroll;
@@ -182,7 +182,7 @@ article img {
 }
 
 ol, ul {
-  line-height: 1.5rem;
+  line-height: 2rem;
 }
 
 .bottom-line {
