deploy: a01e8e71c16bb9079123579b0afbc9cbf77ea1bb

--- a/css/style.css
+++ b/css/style.css
@@ -181,8 +181,8 @@ article img {
   font-family: "fixedsys", "Courier Prime", "Courier New", sans-serif;
 }
 
-ol, ul {
-  line-height: 2rem;
+li + li {
+  margin-top: 1rem;
 }
 
 .bottom-line {
