--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -60,7 +60,7 @@
   --site-width: 45rem;
   --color-one: #A6033F;
   --color-background: #F2D8DA; // edb525
-  --color-three: #F266C1;
+  --color-three: #f266c1;
   --color-four: #D99C9C;
   --color-five: #51608C;
   --color-six: #00CBC9;
@@ -159,8 +159,8 @@ body {
   #site-logo-text {
     // text-align: center;
     @include fixedsys-stack();
-    text-transform: uppercase;
-    font-size: 2rem;
+    // text-transform: uppercase;
+    // font-size: 2rem;
     margin: 0 auto;
     padding: 0 1rem;
     max-width: var(--site-width);
@@ -174,15 +174,25 @@ body {
     @include fixedsys-stack();
 
     display: flex;
-    justify-content: center;
-    align-items: center;
+    // justify-content: center;
+    // align-items: center;
   
     margin: 0 auto;
     max-width: var(--site-width);
   
     a {
       display: block;
-      padding: 1rem 2rem;
+      padding: 0.5rem 1rem;
+      border: 4px solid var(--color-six);
+      text-decoration: none;
+
+      &:hover {
+        border: 4px solid var(--color-three);
+      }
+    }
+
+    a + a {
+      margin-left: 1rem;
     }
   }
 }
