--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
   --site-width: 45rem;
   --color-one: #A6033F;
   --color-background: #F2D8DA;
-  --color-three: #F266C1;
+  --color-three: #f266c1;
   --color-four: #D99C9C;
   --color-five: #51608C;
   --color-six: #00CBC9;
@@ -53,8 +53,6 @@ body .color-scheme-wrapper {
 
 #nav-wrapper #site-logo-text {
   font-family: "fixedsys", "Courier Prime", "Courier New", sans-serif;
-  text-transform: uppercase;
-  font-size: 2rem;
   margin: 0 auto;
   padding: 0 1rem;
   max-width: var(--site-width);
@@ -65,14 +63,20 @@ body .color-scheme-wrapper {
 #nav-wrapper nav {
   font-family: "fixedsys", "Courier Prime", "Courier New", sans-serif;
   display: flex;
-  justify-content: center;
-  align-items: center;
   margin: 0 auto;
   max-width: var(--site-width);
 }
 #nav-wrapper nav a {
   display: block;
-  padding: 1rem 2rem;
+  padding: 0.5rem 1rem;
+  border: 4px solid var(--color-six);
+  text-decoration: none;
+}
+#nav-wrapper nav a:hover {
+  border: 4px solid var(--color-three);
+}
+#nav-wrapper nav a + a {
+  margin-left: 1rem;
 }
 
 #main-wrapper main {
