--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -8,7 +8,7 @@
   <div class="color-scheme-wrapper">
     <div id="nav-wrapper">
       <div id="site-logo-text"><a href="/">/home/joshpsawyer</a></div>
-      <div id="header-nav-bar">{% include "partials/navigation.njk" %}</div>
+      {# <div id="header-nav-bar">{% include "partials/navigation.njk" %}</div> #}
     </div>
     <div id="main-wrapper">
       <main>
