--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -15,6 +15,9 @@
         {{ content | safe }}
       </main>
     </div>
+    <div id="footer-nav-wrapper">
+      <div id="footer-nav">{% include "partials/navigation.njk" %}</div>
+    </div>
     <div class="bottom-line"></div>
     <div class="bottom-line"></div>
     <div class="bottom-line"></div>
