--- a/src/_includes/base_no_topnav.njk
+++ b/src/_includes/base_no_topnav.njk
@@ -7,19 +7,23 @@
   </label> -->
   <div class="color-scheme-wrapper">
     <div id="nav-wrapper">
-      <div id="site-logo-text"><a href="/">JOSH</a></div>
+      <div id="site-logo-text"><a href="/">/home/joshpsawyer</a></div>
+      {# <div id="header-nav-bar">{% include "partials/navigation.njk" %}</div> #}
     </div>
     <div id="main-wrapper">
       <main>
         {{ content | safe }}
       </main>
     </div>
+    <div class="bottom-line"></div>
+    <div class="bottom-line"></div>
+    <div class="bottom-line"></div>
     <div id="footer-wrapper">
-      {# <footer>
-        <a href="/colophon/">
-          (-_-)
-        </a>
-      </footer> #}
+      <footer>
+        {# <br/><a href="/colophon/"> #}
+          (c) 2025 josh sawyer
+        {# </a> #}
+      </footer>
     </div>
   </div>
 </body>
