--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,15 @@ body .color-scheme-wrapper {
   max-width: var(--site-width);
 }
 
+#footer-nav-wrapper #footer-nav {
+  margin: 0 auto;
+  padding: 0 1rem;
+  max-width: var(--site-width);
+}
+#footer-nav-wrapper #footer-nav a {
+  text-decoration: none;
+}
+
 #footer-wrapper {
   font-family: "fixedsys", "Courier Prime", "Courier New", sans-serif;
   background: var(--color-five);
@@ -141,24 +150,27 @@ h1, h2, h3, h4, h5, h6 {
 
 #index-nav nav {
   font-family: "fixedsys", "Courier Prime", "Courier New", sans-serif;
+  margin: 1rem 0;
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-column-gap: 0.75rem;
-  grid-row-gap: 0.75rem;
+  grid-template-columns: repeat(1, 1fr);
+  grid-column-gap: 0.5rem;
+  grid-row-gap: 0.5rem;
   text-align: center;
   font-size: 2rem;
 }
 #index-nav nav a {
   display: block;
   padding: 1rem 2rem;
-  border: 3px dashed #000;
   text-decoration: none;
+  background: var(--color-six);
+  color: var(--color-five);
+  border: 4px solid var(--color-four);
   grid-column: span 3;
 }
 #index-nav nav a:hover {
   background-color: var(--color-three);
   color: var(--color-background);
-  border: 3px dashed #CB9D06;
+  border: 4px solid var(--color-background);
 }
 
 img#article-hero {
@@ -192,4 +204,41 @@ li + li {
 .bottom-line {
   border-top: 4px solid var(--color-three);
   height: 4px;
+}
+
+img.homepage {
+  margin: 1rem 0 0 0;
+}
+
+img.pixelart {
+  image-rendering: pixelated;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: crisp-edges;
+  max-width: 100%;
+  outline: 4px solid var(--color-background);
+  outline-offset: -4px;
+}
+
+img.zoomx2 {
+  -moz-transform: scale(2);
+  -ms-transform: scale(2);
+  -o-transform: scale(2);
+  -webkit-transform: scale(2);
+  transform: scale(2);
+}
+
+img.zoomx3 {
+  -moz-transform: scale(3);
+  -ms-transform: scale(3);
+  -o-transform: scale(3);
+  -webkit-transform: scale(3);
+  transform: scale(3);
+}
+
+img.zoomx4 {
+  -moz-transform: scale(4);
+  -ms-transform: scale(4);
+  -o-transform: scale(4);
+  -webkit-transform: scale(4);
+  transform: scale(4);
 }
