--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -387,3 +387,9 @@ img.zoomx4 {
   -webkit-transform: scale(4);
   transform: scale(4);
 }
+
+@media (min-width: 480px) {
+  #index-nav nav {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
