--- a/css/style.css
+++ b/css/style.css
@@ -242,3 +242,9 @@ img.zoomx4 {
   -webkit-transform: scale(4);
   transform: scale(4);
 }
+
+@media (min-width: 480px) {
+  #index-nav nav {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
