--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -291,11 +291,11 @@ h1, h2, h3, h4, h5, h6 {
     text-decoration: none;
     background: var(--color-six);
     color: var(--color-five);
-    border: 4px solid var(--color-four);
+    border: 4px solid var(--color-background);
 
 
 
-    grid-column: span 3;
+    grid-column: span 1;
 
     &:hover {
       background-color: var(--color-three);
