--- a/css/style.css
+++ b/css/style.css
@@ -164,8 +164,8 @@ h1, h2, h3, h4, h5, h6 {
   text-decoration: none;
   background: var(--color-six);
   color: var(--color-five);
-  border: 4px solid var(--color-four);
-  grid-column: span 3;
+  border: 4px solid var(--color-background);
+  grid-column: span 1;
 }
 #index-nav nav a:hover {
   background-color: var(--color-three);
