--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -209,13 +209,23 @@ body {
 }
 
 #footer-nav-wrapper {
+  border-bottom: 4px solid var(--color-five);
+  background-color: var(--color-six);
+
   #footer-nav {
     margin: 0 auto;
-    padding: 0 1rem;
     max-width: var(--site-width);
-    
+    padding: 1rem 1rem;
+
     a {
+      padding: 1rem 1rem;
+      color: var(--color-five);
       text-decoration: none;
+
+      &:hover {
+        color: var(--color-background);
+        background-color: var(--color-three);
+      }
     }
   }
 }
@@ -360,8 +370,8 @@ img.pixelart {
   image-rendering: crisp-edges;
   max-width: 100%;
   // border: 4px solid var(--color-five)
-  outline: 4px solid var(--color-background);
-  outline-offset: -4px;
+  // outline: 4px solid var(--color-background);
+  // outline-offset: -4px;
 }
 
 img.zoomx2 {
