--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,14 @@
   --color-background: #F2D8DA;
   --color-three: #f266c1;
   --color-four: #D99C9C;
-  --color-five: #51608C;
+  --color-five: #1E2B40;
   --color-six: #00CBC9;
+  --color-seven: #FF9F00;
+  --color-eight: #51608C;
+  --color-nine: #F28705;
+  --color-ten: #F23005;
+  --color-eleven: #D9A404;
+  --color-twelve: #32838C;
 }
 
 body {
@@ -87,26 +93,18 @@ body .color-scheme-wrapper {
 
 #footer-nav-wrapper {
   border-bottom: 4px solid var(--color-five);
-  background-color: var(--color-six);
 }
 #footer-nav-wrapper #footer-nav {
   margin: 0 auto;
   max-width: var(--site-width);
   padding: 1rem 1rem;
 }
-#footer-nav-wrapper #footer-nav a {
-  padding: 1rem 1rem;
-  color: var(--color-five);
+#footer-nav-wrapper #footer-nav nav a {
   text-decoration: none;
+  margin-right: 1rem;
 }
-#footer-nav-wrapper #footer-nav a:hover {
-  color: var(--color-background);
-  background-color: var(--color-three);
-}
-
 #footer-wrapper {
   font-family: "fixedsys", "Courier Prime", "Courier New", sans-serif;
-  background: var(--color-five);
 }
 #footer-wrapper footer {
   margin: 0 auto;
@@ -174,13 +172,11 @@ h1, h2, h3, h4, h5, h6 {
   text-decoration: none;
   background: var(--color-six);
   color: var(--color-five);
-  border: 4px solid var(--color-background);
   grid-column: span 1;
 }
 #index-nav nav a:hover {
   background-color: var(--color-three);
   color: var(--color-background);
-  border: 4px solid var(--color-background);
 }
 
 img#article-hero {
@@ -212,7 +208,7 @@ li + li {
 }
 
 .bottom-line {
-  border-top: 4px solid var(--color-three);
+  border-top: 4px solid var(--color-seven);
   height: 4px;
 }
 
@@ -251,8 +247,16 @@ img.zoomx4 {
   transform: scale(4);
 }
 
+@media (min-width: 300px) {
+  #footer-nav-wrapper #footer-nav nav {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 @media (min-width: 480px) {
   #index-nav nav {
     grid-template-columns: repeat(2, 1fr);
+  }
+  #footer-nav-wrapper #footer-nav nav {
+    grid-template-columns: repeat(6, 1fr);
   }
 }
