--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -168,7 +168,7 @@ body {
     // text-transform: uppercase;
     // font-size: 2rem;
     margin: 0 auto;
-    padding: 0 1rem;
+    padding: 1rem;
     max-width: var(--site-width);
 
     a {
@@ -380,10 +380,6 @@ li + li {
 .bottom-line {
   border-top: 4px solid var(--color-seven);
   height: 4px;
-}
-
-img.homepage {
-  margin: 1rem 0 0 0 ;
 }
 
 img.pixelart {
