--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ body .color-scheme-wrapper {
 #nav-wrapper #site-logo-text {
   font-family: "fixedsys", "Courier Prime", "Courier New", sans-serif;
   margin: 0 auto;
-  padding: 0 1rem;
+  padding: 1rem;
   max-width: var(--site-width);
 }
 #nav-wrapper #site-logo-text a {
@@ -210,10 +210,6 @@ li + li {
 .bottom-line {
   border-top: 4px solid var(--color-seven);
   height: 4px;
-}
-
-img.homepage {
-  margin: 1rem 0 0 0;
 }
 
 img.pixelart {
