further link restructuring, eliminating non-standard fonts

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -8,15 +8,12 @@
   <div class="color-scheme-wrapper">
     <div id="nav-wrapper">
       <div id="site-logo-text"><a href="/">/home/joshpsawyer</a></div>
-      {# <div id="header-nav-bar">{% include "partials/navigation.njk" %}</div> #}
+      <div id="header-nav-bar">{% include "partials/navigation.njk" %}</div>
     </div>
     <div id="main-wrapper">
       <main>
         {{ content | safe }}
       </main>
-    </div>
-    <div id="footer-nav-wrapper">
-      <div id="footer-nav">{% include "partials/navigation.njk" %}</div>
     </div>
     <div class="bottom-line"></div>
     <div class="bottom-line"></div>
