--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,3 @@
-@font-face {
-  font-family: "Kenney Pixel Square";
-  font-style: normal;
-  font-weight: 400;
-  src: url("/assets/fonts/kenney_pixel_square-webfont.woff") format("woff"), url("/assets/fonts/kenney_pixel_square-webfont.woff2") format("woff2");
-}
-@font-face {
-  font-family: "Kenney Pixel";
-  font-style: normal;
-  font-weight: 400;
-  src: url("/assets/fonts/kenney_pixel-webfont.woff") format("woff"), url("/assets/fonts/kenney_pixel-webfont.woff2") format("woff2");
-  /* font-display: swap; */
-}
-@font-face {
-  font-family: "fixedsys";
-  src: url("/assets/fonts/fsex300-webfont.eot");
-  src: url("/assets/fonts/fsex300-webfont.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/fsex300-webfont.woff") format("woff"), url("/assets/fonts/fsex300-webfont.ttf") format("truetype"), url("/assets/fonts/fsex300-webfont.svg#fixedsys") format("svg");
-  font-weight: normal;
-  font-style: normal;
-  -webkit-font-smoothing: none;
-  -moz-osx-font-smoothing: none;
-  font-smooth: never;
-}
 :root {
   --site-width: 45rem;
   --color-one: #A6033F;
@@ -38,9 +15,9 @@
 }
 
 body {
-  font-family: "fixedsys", "Courier Prime", "Courier New", sans-serif;
+  font-family: "Courier", "Courier Prime", "Courier New", sans-serif;
+  font-weight: bold;
   font-display: swap;
-  font-size: 24px;
   height: 100vh;
   overflow-x: auto;
   overflow-y: scroll;
@@ -58,31 +35,28 @@ body .color-scheme-wrapper {
 }
 
 #nav-wrapper #site-logo-text {
-  font-family: "fixedsys", "Courier Prime", "Courier New", sans-serif;
-  margin: 0 auto;
-  padding: 1rem;
+  font-family: "Courier", "Courier Prime", "Courier New", sans-serif;
+  font-weight: bold;
+  margin: 1rem auto;
   max-width: var(--site-width);
 }
 #nav-wrapper #site-logo-text a {
   text-decoration: none;
 }
-#nav-wrapper nav {
-  font-family: "fixedsys", "Courier Prime", "Courier New", sans-serif;
+#nav-wrapper #header-nav-bar {
+  margin: 1rem auto;
+}
+#nav-wrapper #header-nav-bar nav {
+  font-family: "Courier", "Courier Prime", "Courier New", sans-serif;
+  font-weight: bold;
   display: flex;
   margin: 0 auto;
   max-width: var(--site-width);
 }
-#nav-wrapper nav a {
+#nav-wrapper #header-nav-bar nav a {
   display: block;
-  padding: 0.5rem 1rem;
-  border: 4px solid var(--color-six);
   text-decoration: none;
-}
-#nav-wrapper nav a:hover {
-  border: 4px solid var(--color-three);
-}
-#nav-wrapper nav a + a {
-  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 #main-wrapper main {
@@ -91,20 +65,9 @@ body .color-scheme-wrapper {
   max-width: var(--site-width);
 }
 
-#footer-nav-wrapper {
-  border-bottom: 4px solid var(--color-five);
-}
-#footer-nav-wrapper #footer-nav {
-  margin: 0 auto;
-  max-width: var(--site-width);
-  padding: 1rem 1rem;
-}
-#footer-nav-wrapper #footer-nav nav a {
-  text-decoration: none;
-  margin-right: 1rem;
-}
 #footer-wrapper {
-  font-family: "fixedsys", "Courier Prime", "Courier New", sans-serif;
+  font-family: "Courier", "Courier Prime", "Courier New", sans-serif;
+  font-weight: bold;
 }
 #footer-wrapper footer {
   margin: 0 auto;
@@ -153,11 +116,13 @@ h6 {
 h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
   line-height: 1.1;
-  font-family: "fixedsys", "Courier Prime", "Courier New", sans-serif;
+  font-family: "Courier", "Courier Prime", "Courier New", sans-serif;
+  font-weight: bold;
 }
 
 #index-nav nav {
-  font-family: "fixedsys", "Courier Prime", "Courier New", sans-serif;
+  font-family: "Courier", "Courier Prime", "Courier New", sans-serif;
+  font-weight: bold;
   margin: 1rem 0;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
@@ -200,7 +165,8 @@ article img {
 }
 
 #date_created, #date_modified {
-  font-family: "fixedsys", "Courier Prime", "Courier New", sans-serif;
+  font-family: "Courier", "Courier Prime", "Courier New", sans-serif;
+  font-weight: bold;
 }
 
 li + li {
@@ -219,40 +185,8 @@ img.pixelart {
   max-width: 100%;
 }
 
-img.zoomx2 {
-  -moz-transform: scale(2);
-  -ms-transform: scale(2);
-  -o-transform: scale(2);
-  -webkit-transform: scale(2);
-  transform: scale(2);
-}
-
-img.zoomx3 {
-  -moz-transform: scale(3);
-  -ms-transform: scale(3);
-  -o-transform: scale(3);
-  -webkit-transform: scale(3);
-  transform: scale(3);
-}
-
-img.zoomx4 {
-  -moz-transform: scale(4);
-  -ms-transform: scale(4);
-  -o-transform: scale(4);
-  -webkit-transform: scale(4);
-  transform: scale(4);
-}
-
-@media (min-width: 300px) {
-  #footer-nav-wrapper #footer-nav nav {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
 @media (min-width: 480px) {
   #index-nav nav {
     grid-template-columns: repeat(2, 1fr);
-  }
-  #footer-nav-wrapper #footer-nav nav {
-    grid-template-columns: repeat(6, 1fr);
   }
 }
