--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,6 +22,8 @@
 
 body {
     @include monospace-font-stack();
+    font-family: Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    font-weight:normal;
     font-display: swap;
     // font-size: 24px;
     height: 100vh;
@@ -30,6 +32,8 @@ body {
     overflow-x: auto;
     overflow-y: scroll;
     margin: 0 auto;
+
+    min-width: 320px;
 
     color: var(--color-five);
 
@@ -47,13 +51,14 @@ body {
 }
 
 #nav-wrapper {
+  padding: 1rem;
 
   #site-logo-text {
     // text-align: center;
     @include monospace-font-stack();
     // text-transform: uppercase;
     // font-size: 2rem;
-    margin: 1rem auto;
+    margin: 0 auto 1rem auto;
     max-width: var(--site-width);
 
     a {
@@ -62,7 +67,7 @@ body {
   }
 
   #header-nav-bar {
-    margin: 1rem auto;
+    margin: 0 auto;
     nav {
       @include monospace-font-stack();
   
